# employee_smart_contract

./: .gitignore  README.md
client/: client.ts  package-lock.json  package.json  private_key.json
employee_rust/employees/: Cargo.toml
employee_rust/employees/src/: entrypoint.rs  instruction.rs  processor.rs  state.rs
