[package]
name = "employees"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.11.0"
borsh-derive = "0.11.0"
solana-program="1.10.0"



[dev-dependencies]
solana-program-test ="1.10.0" 
solana-sdk = "1.10.0"



[features]
no-entrypoint = []


[lib]
crate-type = ["cdylib", "lib"]
