[package]
name = "employees"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.10.3"
borsh-derive = "0.10.3"
solana-program="1.10.0"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}



[dev-dependencies]
solana-program-test ="1.10.0" 
solana-sdk = "1.10.0"



[features]
no-entrypoint = []


[lib]
crate-type = ["cdylib", "lib"]
